# FFmpeg-Remux

./: README.md  Readme.txt  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/jldevelopers/ffmpegremux/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/jldevelopers/ffmpegremux/: MainActivity.java
app/src/main/res/values/: themes.xml
app/src/main/res/values-night/: themes.xml
ffmpeg-source/: build.sh
ffmpegremux/: build.gradle
ffmpegremux/src/androidTest/java/com/jldevelopers/ffmpegremux/: ExampleInstrumentedTest.java
ffmpegremux/src/main/: AndroidManifest.xml
ffmpegremux/src/main/cpp/: CMakeLists.txt  ffmpeg_loader.cpp  ffmpeg_main.cpp
ffmpegremux/src/main/java/com/jldevelopers/ffmpegremux/: FFmpegLoader.java
ffmpegremux/src/main/res/values/: strings.xml  themes.xml
ffmpegremux/src/test/java/com/jldevelopers/ffmpegremux/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
